Fix: Apply tab content visibility rules to Mega Menu styles

--- a/src/scss/components/navigation/_ez-nav-main.scss
+++ b/src/scss/components/navigation/_ez-nav-main.scss
@@ -197,4 +197,15 @@
             }
         }
     }
+
+    // Tab Content Persistence Fix for Mega Menu
+    .tab-content {
+        >.tab-pane {
+            display: none;
+        }
+
+        >.active {
+            display: block;
+        }
+    }
 }
